# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) HCL TECHNOLOGIES LTD
# Submitted on behalf of a third-party: Intel Corporation, a
# Delaware corporation, having its principal place of business
# at 2200 Mission College Boulevard,
# Santa Clara, California 95052, USA

sources = files(
	'main.c',
	'n3k_dump_cmdline.c',
	'n3k_dump_printers.c',
	'n3k_dump_json.c',
	'n3k_dump_utils.c',
	'n3k_dump_debug_regs.c',
