# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) HCL TECHNOLOGIES LTD
# Submitted on behalf of a third-party: Intel Corporation, a
# Delaware corporation, having its principal place of business
# at 2200 Mission College Boulevard,
# Santa Clara, California 95052, USA

allow_experimental_apis = true
sources += files(
	'common/n3k_parse_list.c',
	'common/n3k_log.c',
	'mgmt/flr_sim/n3k_mgmt_flr_sim_dispatcher.c',
	'mgmt/flr_sim/n3k_mgmt_flr_sim_init.c',
	'mgmt/flr_sim/n3k_mgmt_flr_sim_queues_mgmt.c',
	'mgmt/flr_sim/n3k_mgmt_flr_sim_request_handler.c',
	'mgmt/n3k_mgmt_init/n3k_mgmt_init_flow.c',
	'mgmt/n3k_mgmt_init/n3k_mgmt_init_mq_hw_access.c',
	'mgmt/n3k_mgmt_init/n3k_mgmt_init_mq.c',
	'mgmt/n3k_mgmt_init/n3k_mgmt_init_mq_hw_access.c',
	'mgmt/n3k_mgmt_init/n3k_mgmt_init_port.c',
	'mgmt/regs/n3k_mgmt_regs.c',
	'mgmt/n3k_mgmt_args.c',
	'mgmt/n3k_mgmt_concurrent_pos_set.c',
	'mgmt/n3k_mgmt_conversions.c',
	'mgmt/n3k_mgmt_ct.c',
	'mgmt/n3k_mgmt_dump.c',
	'mgmt/n3k_mgmt_ethdev.c',
	'mgmt/n3k_mgmt_flow_id_allocator.c',
	'mgmt/n3k_mgmt_flow_tbl_handles.c',
	'mgmt/n3k_mgmt_flow_tbl.c',
	'mgmt/n3k_mgmt_flow_tracker.c',
	'mgmt/n3k_mgmt_flr_ack_dispatcher.c',
	'mgmt/n3k_mgmt_flr_cmd_queue.c',
	'mgmt/n3k_mgmt_flr_command.c',
	'mgmt/n3k_mgmt_flr_dispatcher.c',
	'mgmt/n3k_mgmt_flr_flow_stats_cmd_src.c',
	'mgmt/n3k_mgmt_flr_flow_tbl.c',
	'mgmt/n3k_mgmt_flr_flow_tracker.c',
	'mgmt/n3k_mgmt_flr_pkts.c',
	'mgmt/n3k_mgmt_flr_pkts_blocks.c',
	'mgmt/n3k_mgmt_flr_read_reg_32.c',
	'mgmt/n3k_mgmt_flr_ready_cmd_handler.c',
	'mgmt/n3k_mgmt_flr_tbl.c',
	'mgmt/n3k_mgmt_general_flow_stats.c',
	'mgmt/n3k_mgmt_handle_mapping.c',
	'mgmt/n3k_mgmt_hw.c',
	'mgmt/n3k_mgmt_init.c',
	'mgmt/n3k_mgmt_lag.c',
	'mgmt/n3k_mgmt_lock.c',
	'mgmt/n3k_mgmt_log.c',
	'mgmt/n3k_mgmt_mp_callbacks.c',
	'mgmt/n3k_mgmt_mp.c',
	'mgmt/n3k_mgmt_pmd.c',
	'mgmt/n3k_mgmt_port_stats.c',
	'mgmt/n3k_mgmt_ports.c',
	'mgmt/n3k_mgmt_recirc_id_allocator.c',
	'mgmt/n3k_mgmt_regs_ctrl.c',
	'mgmt/n3k_mgmt_rte_flow_parse_print.c',
	'mgmt/n3k_mgmt_rte_flow_parse.c',
	'mgmt/n3k_mgmt_rte_flow.c',
	'mgmt/n3k_mgmt_smac_tbl_cache.c',
	'mgmt/n3k_mgmt_smac_tbl.c',
	'mgmt/n3k_mgmt_tbl.c',
	'mgmt/n3k_mgmt_tunnel_tbl_cache.c',
	'mgmt/n3k_mgmt_tunnel_tbl.c',
	'mgmt/n3k_mgmt_vplkp_tbl_cache.c',
	'mgmt/n3k_mgmt_vplkp_tbl.c',
	'rte_pmd_n3k_flow_tbl_mgmt.c',
	'rte_pmd_n3k_malloc.c',
	'rte_pmd_n3k_mp.c',
	'rte_pmd_n3k_port.c',
	'rte_pmd_n3k_smac_tbl_mgmt.c',
	'rte_pmd_n3k_tunnel_tbl_mgmt.c',
	'rte_pmd_n3k_vplkp_tbl_mgmt.c',
	'rte_pmd_n3k.c',
	'vdev/n3k_vdev_args.c',
	'vdev/n3k_vdev_device.c',
	'vdev/n3k_vdev_dispatcher.c',
	'vdev/n3k_vdev_flow.c',
	'vdev/n3k_vdev_log.c',
	'vdev/n3k_vdev_pmd.c',
	'vdev/n3k_vdev_rxtx.c',
)

deps += [
	'vhost',
	'ethdev',
	'eal',
	'mbuf',
	'pmd_bond',
]
